--- a/.github/workflows/testing-and-coverage.yml
+++ b/.github/workflows/testing-and-coverage.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Run unit tests with pytest
       run: |
         python -m pytest --cov=snapi --cov-report=xml
-    - name: Upload coverage report to codecov
-      uses: codecov/codecov-action@v4
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v4.0.1
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
