Added Lightcurve init and pad functions

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -105,6 +105,7 @@ repos:
         args:
           [
             "--strict", # Use mypy strict mode to enforce type hints
+            "--ignore-missing-imports"
           ]
     # Make sure Sphinx can build the documentation while explicitly omitting 
     # notebooks from the docs, so users don't have to wait through the execution 
