--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dynamic = ["version"]
 requires-python = ">=3.9"
 dependencies = [
     'astropy',
+    'george',
     'matplotlib',
     'numba',
     'numpy',
