--- a/.github/workflows/pre-commit-ci.yml
+++ b/.github/workflows/pre-commit-ci.yml
@@ -21,7 +21,7 @@ jobs:
       with:
         python-version: 3.12
     - name: Install librdkafka
-      run: sudo apt-get install -y lib confluent-librdkafka
+      run: sudo apt-get install -y librdkafka-dev
     - name: Install dependencies
       run: |
         sudo apt-get update
