--- a/.github/workflows/smoke-test.yml
+++ b/.github/workflows/smoke-test.yml
@@ -28,6 +28,8 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Install librdkafka
+      run: sudo apt-get install -y librdkafka-dev
     - name: Install dependencies
       run: |
         sudo apt-get update
