--- a/.github/workflows/asv-main.yml
+++ b/.github/workflows/asv-main.yml
@@ -56,6 +56,8 @@ jobs:
           path: ~/.cache/pip
           key: python-${{ env.PYTHON_VERSION }}
 
+      - name: Install librdkafka
+        run: sudo apt-get install -y librdkafka-dev
       - name: Install dependencies
         run: |
           sudo apt-get update
