--- a/.github/workflows/asv-pr.yml
+++ b/.github/workflows/asv-pr.yml
@@ -51,6 +51,8 @@ jobs:
       with:
         path: ~/.cache/pip
         key: python-${{ env.PYTHON_VERSION }}
+    - name: Install librdkafka
+      run: sudo apt-get install -y librdkafka-dev
     - name: Install dependencies
       run: |
         sudo apt-get update
