--- a/.github/workflows/pre-commit-ci.yml
+++ b/.github/workflows/pre-commit-ci.yml
@@ -20,6 +20,7 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: 3.12
+        cache: 'pip'
     - name: Install librdkafka
       run: sudo apt-get install -y librdkafka-dev
     - name: Install dependencies
