--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -27,6 +27,7 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: '3.10'
+        cache: 'pip'
     - name: Install librdkafka
       run: sudo apt-get install -y librdkafka-dev
     - name: Install dependencies
