--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     'alerce',
     'antares-client',
     'astropy',
+    'colorcet',
     'george',
     'h5py',
     'matplotlib',
