--- a/.gitattributes
+++ b/.gitattributes
@@ -41,3 +41,7 @@ docs/notebooks/data/ddf_transient2_2021aewz.hdf5 filter=lfs diff=lfs merge=lfs -
 docs/notebooks/data/ddf_transient2_2021nfp.hdf5 filter=lfs diff=lfs merge=lfs -text
 docs/notebooks/data/ddf_transient_2019tzk.hdf5 filter=lfs diff=lfs merge=lfs -text
 docs/notebooks/data/ddf_transient_2021aewz.hdf5 filter=lfs diff=lfs merge=lfs -text
+data/ghost_db filter=lfs diff=lfs merge=lfs -text
+data/ghost_db/database/GHOST.csv filter=lfs diff=lfs merge=lfs -text
+data/tmp filter=lfs diff=lfs merge=lfs -text
+data/** filter=lfs diff=lfs merge=lfs -text
