LightCurve coverage near 100%

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     'numpy',
     'pandas',
     'pandas-stubs',
+    'pytables',
     'pyts',
     'types-requests',
     'requests'
