--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,10 +43,19 @@ dev = [
     "black", # Used for static linting of files
     "jupyter", # Clears output from Jupyter notebooks
     "mypy", # Used for static type checking of files
-    "pre-commit", # Used to run checks before finalizing a git commit
-    "pylint", # Used for static linting of files
+    "ipykernel", # Support for Jupyter notebooks
+    "ipython", # Also used in building notebooks into Sphinx
+    "nbconvert", # Needed for pre-commit check to clear output from Python notebooks
+    "nbsphinx", # Used to integrate Python notebooks into Sphinx documentation
+    "nbval", # Used to run Jupyter notebooks with pytest
     "pytest",
     "pytest-cov", # Used to report total code coverage
+    "pre-commit", # Used to run checks before finalizing a git commit
+    "sphinx", # Used to automatically generate documentation
+    "sphinx-rtd-theme", # Used to render documentation
+    "sphinx-autoapi", # Used to automatically generate api documentation
+    "sphinx_copybutton",
+    "pylint", # Used for static linting of files
 ]
 queries = [
     "alerce>=1.2.0",
