--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,9 +68,7 @@ dev = [
     "sphinx-autoapi", # Used to automatically generate api documentation
     "sphinx_copybutton",
     "pylint", # Used for static linting of files
-    *queries,
-    *samplers,
-]
+] + project.optional-dependencies.queries + project.optional-dependencies.samplers
 
 
 [build-system]
