--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,10 +69,8 @@ dev = [
     "sphinx_copybutton",
     "pylint", # Used for static linting of files
     "alerce>=1.2.0",
-    "confluent-kafka>=2.6.1",
-    "antares_client>=1.8.0",
-    "astro_ghost",
-    "jax",
+    "snapi[queries]",
+    "snapi[samplers]"
 ]
 
 
