--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ dependencies = [
     'h5py',
     'matplotlib',
     'numba',
-    'numpy',
+    'numpy==1.23.5',
     'pandas',
     'pandas-stubs',
     'pyts',
