Fix dotenv install

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ dependencies = [
     'astropy',
     'colorcet',
     'dill',
-    'dotenv',
+    'python-dotenv',
     'dustmaps',
     'extinction',
     'george',
