--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
     'matplotlib',
     'multiprocess',
     'numba',
-    'numpy==1.23.5',
+    'numpy<=1.26.3',
     'pandas',
     'pandas-stubs',
     'pyts',
